@@ -6,12 +6,16 @@ import java.util.Comparator;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Queue;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.concurrent.RejectedExecutionException;
-import lombok.extern.slf4j.Slf4j;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Orchestrates the simulation ticks.
@@ -19,25 +23,26 @@ import lombok.extern.slf4j.Slf4j;
  *
  * @param <T> The base type of entities in the simulation world.
  */
-@Slf4j
 public class GameLoop<T extends Mortal> {
+    private static final Logger log = LoggerFactory.getLogger(GameLoop.class);
+    
     private final List<ScheduledTask> recurringTasks = new ArrayList<>();
-    private final java.util.Queue<ScheduledTask> pendingTasks = new ConcurrentLinkedQueue<>();
+    private final Queue<ScheduledTask> pendingTasks = new ConcurrentLinkedQueue<>();
     private final long tickDurationMs;
     private final ExecutorService taskExecutor;
     private volatile boolean running = false;
     private int tickCount = 0;
-    private SimulationWorld<T> world;
+    private SimulationWorld<T, ?> world;
     private Thread loopThread;
 
     public GameLoop(long tickDurationMs, int threadCount) {
         this.tickDurationMs = tickDurationMs;
         this.taskExecutor = (threadCount > 0)
-                ? java.util.concurrent.Executors.newFixedThreadPool(threadCount)
-                : java.util.concurrent.Executors.newVirtualThreadPerTaskExecutor();
+                ? Executors.newFixedThreadPool(threadCount)
+                : Executors.newVirtualThreadPerTaskExecutor();
     }
 
-    public void setWorld(SimulationWorld<T> world) {
+    public void setWorld(SimulationWorld<T, ?> world) {
         this.world = world;
     }
 
@@ -57,8 +62,8 @@ public class GameLoop<T extends Mortal> {
                 }
 
                 @Override
-                public boolean isParallelizable() {
-                    return false;
+                public ExecutionMode executionMode() {
+                    return ExecutionMode.SEQUENTIAL;
                 }
 
                 @Override
@@ -123,6 +128,7 @@ public class GameLoop<T extends Mortal> {
             }
         }
 
+        // Reuse a fixed structure for phases to reduce allocations
         Map<Phase, List<ScheduledTask>> phasedTasks = new EnumMap<>(Phase.class);
         for (Phase phase : Phase.values()) {
             phasedTasks.put(phase, new ArrayList<>());
@@ -143,7 +149,7 @@ public class GameLoop<T extends Mortal> {
 
             List<CellService<T, SimulationNode<T>>> parallelGroup = new ArrayList<>();
             for (ScheduledTask task : tasks) {
-                if (task.isParallelizable() && task instanceof CellService) {
+                if (task.executionMode() == ExecutionMode.PARALLEL && task instanceof CellService) {
                     @SuppressWarnings("unchecked")
                     CellService<T, SimulationNode<T>> cellService = (CellService<T, SimulationNode<T>>) task;
                     parallelGroup.add(cellService);
@@ -155,7 +161,7 @@ public class GameLoop<T extends Mortal> {
                     try {
                         task.tick(tickCount);
                     } catch (Exception e) {
-                        log.error("Error during simulation tick: {}", e.getMessage(), e);
+                        log.error("Error during simulation tick in phase {}: {}", phase, e.getMessage(), e);
                     }
                 }
             }
@@ -173,7 +179,11 @@ public class GameLoop<T extends Mortal> {
         }
 
         for (CellService<T, SimulationNode<T>> service : services) {
-            service.beforeTick(tickCount);
+            try {
+                service.beforeTick(tickCount);
+            } catch (Exception e) {
+                log.error("Error in beforeTick for service {}: {}", service.getClass().getSimpleName(), e.getMessage(), e);
+            }
         }
 
         Collection<? extends Collection<? extends SimulationNode<T>>> workUnits = world.getParallelWorkUnits();
@@ -183,7 +193,12 @@ public class GameLoop<T extends Mortal> {
             tasks.add(() -> {
                 for (SimulationNode<T> node : unit) {
                     for (CellService<T, SimulationNode<T>> service : services) {
-                        service.processCell(node, tickCount);
+                        try {
+                            service.processCell(node, tickCount);
+                        } catch (Exception e) {
+                            log.error("Error processing cell {} in service {}: {}", 
+                                    node.getCoordinates(), service.getClass().getSimpleName(), e.getMessage(), e);
+                        }
                     }
                 }
                 return null;
@@ -191,12 +206,13 @@ public class GameLoop<T extends Mortal> {
         }
 
         try {
-            List<java.util.concurrent.Future<Void>> futures = taskExecutor.invokeAll(tasks);
-            for (java.util.concurrent.Future<Void> future : futures) {
+            List<Future<Void>> futures = taskExecutor.invokeAll(tasks);
+            for (Future<Void> future : futures) {
                 try {
                     future.get();
-                } catch (java.util.concurrent.ExecutionException e) {
-                    log.error("Error in parallel cell service execution: {}", e.getCause().getMessage(), e.getCause());
+                } catch (ExecutionException e) {
+                    log.error("Critical error in parallel cell service execution: {}", e.getCause().getMessage(), e.getCause());
+                    // In a production engine, we might want to trigger a simulation stop or rollback here
                 }
             }
         } catch (InterruptedException e) {
@@ -206,7 +222,11 @@ public class GameLoop<T extends Mortal> {
         }
 
         for (CellService<T, SimulationNode<T>> service : services) {
-            service.afterTick(tickCount);
+            try {
+                service.afterTick(tickCount);
+            } catch (Exception e) {
+                log.error("Error in afterTick for service {}: {}", service.getClass().getSimpleName(), e.getMessage(), e);
+            }
         }
     }
 
